--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 
     <header id="main-header">
         <nav class="container">
-            <a href="#home" class="logo">LustroPrime</a>
+            <a href="#home" class="logo"><img src="logo.png" alt="LustroPrime Logo"></a>
             <ul class="nav-menu">
                 <li><a href="#servicos">Destaques</a></li>
                 <li><a href="#todos-servicos">Serviços</a></li>
